#3437 Footer css module

--- a/_layouts/mag.html
+++ b/_layouts/mag.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-    <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>NewsFront magasin</title>
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -11,7 +13,7 @@
     {% include ad-mobile.html %}
   </div>
 
-  <div class="header" id="header">
+  <header class="header" id="header">
     <nav class="top-bar">
       <ul class="title-area">
         <li class="name">
@@ -30,11 +32,11 @@
         </ul>
       </section>
     </nav>
-  </div>
+  </header>
 
   {{ content }}
 
-  <footer class="global-footer">
+  <footer class="l-row global-footer">
     <div class="links-bar row">
       <div class="large-3 columns">
         <h3 class="image-replace nf-logo-white"><a href="/" class="footer-logo-link">Newsfront</a></h3>
