--- a/_sass/partials/global/_base.scss
+++ b/_sass/partials/global/_base.scss
@@ -42,7 +42,7 @@
 // and uncommenting what you want below.
 // @import "foundation/components/global"; // *always required
 // @import "foundation/components/grid";
-// @import "foundation/components/visibility";
+//* @import "foundation/components/visibility";
 // @import "foundation/components/block-grid";
 // @import "foundation/components/type";
 // @import "foundation/components/buttons";
