Added custom menus

--- a/_includes/scripts-global.html
+++ b/_includes/scripts-global.html
@@ -6,11 +6,16 @@
   <script src="js/vendor/holder.js"></script>
   <script src="js/vendor/classie.js"></script>
   <script src="js/vendor/uisearch.js"></script>
+  <script src="js/nf-dropdownmenu.js"></script>
 
   <script>
     $(document).ready(function(){
       $(document).foundation();
       $('#video-wrapper').fitVids();
+
+      $('#nf-menu-top').menuToggle();
+      $('#nf-menu-main').menuToggle();
+      $('#nf-menu-main-blue').menuToggle();
     });
   </script>
 
