--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -34,3 +34,4 @@ $legacy-support-for-mozilla: false;
 @import 'modules/responsive';
 @import 'modules/buttons';
 @import 'modules/article-grid';
+@import 'modules/menu';
