--- a/_sass/partials/global/_base.scss
+++ b/_sass/partials/global/_base.scss
@@ -25,6 +25,7 @@
 // @import 'normalize/tables';
 
 // Private Imports
+@import 'settings';
 @import 'variables';
 @import 'functions';
 @import 'mixins';
