--- a/_sass/partials/global/_variables.scss
+++ b/_sass/partials/global/_variables.scss
@@ -10,8 +10,10 @@ $color-top-border: #DDD;
 
 
 // Global Footer variables
-$footer-bg-color:     #ED232A !default;
-$footer-border-color: #B5000C !default;
-$footer-font-family:  $font-family-sans !default;
-$footer-font-size:    12px !default;
-$footer-text-color:   white !default;
+$footer-logo:         'nf-logo-light.png';
+$footer-bg-color:     #ED232A;
+$footer-bar-bg-color: #C9000D;
+$footer-border-color: #B5000C;
+$footer-font-family:  $font-family-sans;
+$footer-font-size:    12px;
+$footer-text-color:   white;
