#3437 Smacssify hero unit for footer

--- a/_includes/hero-section-footer.html
+++ b/_includes/hero-section-footer.html
@@ -1,25 +1,22 @@
-<section class="portrait hero-section has-background stick-to-footer front-section">
-    <div style="background-image: url(&quot;http://cdn.thedailybeast.com/content/newsweek/2013/05/22/issue/jcr:content/issue/cover/image.full.1280.1024.jpg/1369845942544.cached.jpg&quot;); height: 704px;" class="hero">
-        <div class="overlay center">
-                <div class="row">
-                    <div class="large-6 large-centered columns">
 
-                        <h2 class="hero-label">
-                            Fokus
-                        </h2>
-                        <article class="article-portrait">
-                            <h1 class="title">
-                                <a href="story-n.html">Verdensbefolkning øker dobbelt så fort som vi trodde</a>
-                            </h1>
-                            <p class="lead">
-                                <a href="story-n.html">Dette endrer alt, sier forsker</a>
-                                
-                            </p>
-                            <a href="#" class="btn-simple light">Les mer</a>
-                        </article>
+<section class="hero" style="background-image: url(/img/assets/placeholder--hero-bottom.jpg); height: 704px;">
 
-                    </div>
-                </div>
-            </div>
+  <div class="l-row">
+    <div class="hero--box overlay center">
+      <h2 class="hero--label">Fokus</h2>
+
+      <article class="hero--article">
+        <header>
+          <h1 class="title"><a href="story-n.html">Verdensbefolkning øker dobbelt så fort som vi trodde</a></h1>
+        </header>
+
+        <p><a href="story-n.html">Dette endrer alt, sier forsker</a></p>
+
+        <footer>
+          <a href="#" class="btn-simple light">Les mer</a>
+        </footer>
+      </article>
     </div>
+  </div>
+
 </section>
