--- a/_sass/partials/global/_mixins.scss
+++ b/_sass/partials/global/_mixins.scss
@@ -8,3 +8,10 @@
   background-repeat: no-repeat;
   @include background-size(cover);
 }
+
+// Box align center
+@mixin block-center {
+  margin-left: auto;
+  margin-right: auto;
+  float: none !important;
+}
