Added ajax solr querying to search page

--- a/_includes/menu-top.html
+++ b/_includes/menu-top.html
@@ -5,7 +5,7 @@
     <ul>
       <li class=""><a href="#" class="">Abonnér</a></li>
       <li class="divider"></li>
-      <li class=""><a href="#" class="">Søk</a></li>
+      <li class=""><a href="search.html" class="">Søk</a></li>
       <li class="divider"></li>
     </ul>
   </section>
