--- a/_includes/serp.html
+++ b/_includes/serp.html
@@ -1,5 +1,5 @@
 
-<article itemscope="" itemtype="http://schema.org/Article" class="serp row">
+<article itemscope="" itemtype="http://schema.org/Article" class="serp row" style="display: none;">
 
 
       <div class="story-image lazy-image small-3 columns">
@@ -41,9 +41,11 @@
             <abbr class="published story-meta-item story-timestamp" title="2013-05-23 11:07:24"><time datetime="2013-05-23 11:07:24">2w</time></abbr>
           </div> -->
 
-          
+
         </header>
+        <p class="story-date"></p>
         <p itemprop="description" class="story-description">Én ting har USAs 10 siste presidenter til felles: Ungdomstiden deres var fylt med fester, fester og atter fester. <mark>Obama</mark> og kona er intet unntak. Se hva som gjør at de ikke liker å vise ... </p>
+
       </div>
 
 </article>
