--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -35,3 +35,4 @@ $legacy-support-for-mozilla: false;
 @import 'modules/buttons';
 @import 'modules/article-grid';
 @import 'modules/menu';
+@import 'modules/searchbox-nf';
